Añadidos estilos y arreglados varios bugs

--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -165,7 +165,28 @@
 		  </authorization>
 	  </system.web>
   </location>
+	<location path="Pages/User/PerfilCargado.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
 	<location path="Pages/User/ImageDetails.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Pages/User/Follows.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Pages/User/Followers.aspx">
 		<system.web>
 			<authorization>
 				<allow users="*" />
