--- a/PracticaMaD/ModelTests/ModelTests.csproj
+++ b/PracticaMaD/ModelTests/ModelTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ImageUploadService\ImageUploadServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NinjectXMLTest.cs" />
+    <Compile Include="TagService\TagServiceTest.cs" />
     <Compile Include="TestManager.cs" />
     <Compile Include="UserProfileTest.cs" />
     <Compile Include="UserService\UserServiceTest.cs" />
