--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -224,22 +224,22 @@
                         <value>count</value>
                 </setting>
                 <setting name="ObjectDS_Follows_CountMethod" serializeAs="String">
-                        <value>getNumberOfFollows</value>
+                        <value>GetNumberOfFollows</value>
                 </setting>
                 <setting name="ObjectDS_User_Followers_SelectMethod" serializeAs="String">
                         <value>FollowerList</value>
                 </setting>
                 <setting name="ObjectDS_Followers_CountMethod" serializeAs="String">
-                        <value>getNumberOfFollowers</value>
+                        <value>GetNumberOfFollowers</value>
                 </setting>
                 <setting name="ObjectDS_Image_Service" serializeAs="String">
                         <value>Es.Udc.DotNet.PracticaMaD.Model.ImageUploadService.IImageUploadService</value>
                 </setting>
                 <setting name="ObjectDS_Image_SelectMethod" serializeAs="String">
-                        <value>recentUploads</value>
+                        <value>RecentUploads</value>
                 </setting>
                 <setting name="ObjectDS_Images_CountMethod" serializeAs="String">
-                        <value>getNumberOfImages</value>
+                        <value>GetNumberOfImages</value>
                 </setting>
                 <setting name="ObjectDS_Comments_SelectMethod" serializeAs="String">
                         <value>searchComments</value>
@@ -251,35 +251,35 @@
                         <value>CountComments</value>
                 </setting>
                 <setting name="ObjectDS_Tag_SelectMethod" serializeAs="String">
-                        <value>findMostUsedTags</value>
+                        <value>FindMostUsedTags</value>
                 </setting>
                 <setting name="ObjectDS_Tag_Service" serializeAs="String">
                         <value>Es.Udc.DotNet.PracticaMaD.Model.TagService.ITagService</value>
                 </setting>
                 <setting name="ObjectDS_Tag_CountMethod" serializeAs="String">
-                        <value>countTags</value>
+                        <value>CountTags</value>
                 </setting>
                 <setting name="ObjectDS_Tag_Image_SelectMethod" serializeAs="String">
-                        <value>fingImagesByTagId</value>
+                        <value>FingImagesByTagId</value>
                 </setting>
                 <setting name="ObjectDS_Tag_Images_CountMethod" serializeAs="String">
-                        <value>countImagesWithTag</value>
+                        <value>CountImagesWithTag</value>
                 </setting>
                 <setting name="ObjectDS_Search_keywords_SelectMethod" serializeAs="String">
                         <value>FindByKeywordAndCategory</value>
                 </setting>
                 <setting name="ObjectDS_Search_Keywords_CountMethod" serializeAs="String">
-                        <value>countSearchKeywords</value>
+                        <value>CountSearchKeywords</value>
                 </setting>
                 <setting name="ObjectDS_Search_keywords_without_category_SelectMethod"
                         serializeAs="String">
                         <value>FindByKeyword</value>
                 </setting>
                 <setting name="ObjectDS_Recent_Image_SelectMethod" serializeAs="String">
-                        <value>findRecentUploads</value>
+                        <value>FindRecentUploads</value>
                 </setting>
                 <setting name="ObjectDS_Recent_Images_CountMethod" serializeAs="String">
-                        <value>countRecentUploads</value>
+                        <value>CountRecentUploads</value>
                 </setting>
                 <setting name="ObjectDS_Image_Tag_SelectMethod" serializeAs="String">
                         <value>FindImageTags</value>
