Arreglados fallos menores

--- a/PracticaMaD/Web/Web.config
+++ b/PracticaMaD/Web/Web.config
@@ -71,7 +71,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-    <sessionState cookieless="UseCookies" timeout="30" />
+    <sessionState cookieless="UseUri" timeout="30" />
     <!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
